fix travis tests

--- a/cypress/fixtures/gene/track-conf-export.conf
+++ b/cypress/fixtures/gene/track-conf-export.conf
@@ -5,4 +5,4 @@ key=ICGC_Genes
 metadata.datatype=Genes
 unsafePopup=true
 size=1000
-filters={"gene":{"location":{"is":["1:0-249012431"]}}}
+filters={}
